--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -5,3 +5,14 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+#layout-root {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0;
+
+  position: relative;
+
+  background: $background-white;
+}
