[FEAT] 사이드바 구현

--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -4,5 +4,8 @@ $text-white: #FFFFFF;
 
 $background-white: #FFFFFF;
 
+$scrollbar-background-color: #2a2a2a;
+$scrollbar-color: #b0b0b0;
+
 $text-size-default: 14px;
 $text-size-title: 20px;
