--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -1,9 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 
+html {
+  height: 100%;
+  min-height: 600px;
+}
+
+body {
+  height: 100%;
+}
+
 #app {
   font-family: 'Noto Sans KR', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
 }
 
 #layout-root {
@@ -15,4 +25,25 @@
   position: relative;
 
   background: $background-white;
+
+  height: 100%;
 }
+
+.list-vuetify::-webkit-scrollbar {
+  width: 4px;
+}
+
+.list-vuetify::-webkit-scrollbar-thumb {
+  height: 30%;
+  background: $scrollbar-color;
+
+  border-radius: 10px;
+}
+
+.list-vuetify::-webkit-scrollbar-track {
+  background: $scrollbar-background-color;
+}
+
+//.list-vuetify-title {
+//  font-size: 14px !important;
+//}
