--- a/src/css/pages/project.scss
+++ b/src/css/pages/project.scss
@@ -6,6 +6,7 @@
   gap: 20px;
 
   width: 100%;
+  height: calc(100% - 60px);
 
   flex: none;
   order: 1;
@@ -21,7 +22,7 @@
   gap: 10px;
 
   min-width: 200px;
-  height: 100vh;
+  height: 100%;
 
   background: $main-color;
   border-radius: 15px;
@@ -30,6 +31,8 @@
   order: 0;
   align-self: stretch;
   flex-grow: 0;
+
+  box-sizing: border-box;
 }
 
 #layout-sidebar-project-list {
@@ -40,11 +43,16 @@
   gap: 14px;
 
   width: 100%;
+  height: calc(100% - 49px);
 
   flex: none;
   order: 0;
   align-self: stretch;
   flex-grow: 1;
+
+  max-height: none;
+
+  box-sizing: border-box;
 }
 
 #text-project-list-title {
@@ -60,4 +68,18 @@
   flex: none;
   order: 0;
   flex-grow: 0;
+}
+
+#text-project-list-item {
+  background: $main-color;
+  color: $text-white;
+  margin-left: -10px;
+}
+
+#text-project-list-item {
+  width: 100%;
+}
+
+#text-project-create-btn {
+  width: 100%;
 }
