--- a/src/css/pages/project.scss
+++ b/src/css/pages/project.scss
@@ -74,10 +74,7 @@
 #text-project-list-item {
   background: $main-color;
   color: $text-white;
-  margin-left: -10px;
-}
-
-#text-project-list-item {
+  //margin-left: -10px;
   width: 100%;
 }
 
@@ -152,13 +149,65 @@
   font-style: normal;
   font-weight: 600;
   font-size: 20px;
-  line-height: 23px;
+  //line-height: 23px;
   display: flex;
   align-items: center;
 
   color: $text-black;
 
+  height: 100%;
+
   flex: none;
   order: 0;
   flex-grow: 1;
+}
+
+#layout-project-editor-main {
+  box-sizing: border-box;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0;
+  gap: 10px;
+
+  width: 100%;
+  height: calc(100% - 50px);
+
+  border: 1px solid #232323;
+  border-radius: 8px;
+
+  flex: none;
+  order: 1;
+  align-self: stretch;
+  flex-grow: 1;
+}
+
+#layout-project-editor-main-title {
+  padding: 10px 0;
+
+  width: 100%;
+  height: 39px;
+
+  background: #232323;
+  border-radius: 8px 8px 0 0;
+
+  flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 0;
+}
+
+#editor-main-title {
+  width: 100%;
+  height: 100%;
+
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+
+  text-align: center;
+
+  color: $text-white;
 }
