[FEAT] 태그 하이라이트 효과 추가

--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -43,3 +43,18 @@ body {
 .list-vuetify::-webkit-scrollbar-track {
   background: $scrollbar-background-color;
 }
+
+.list-vuetify-light::-webkit-scrollbar {
+  width: 4px;
+}
+
+.list-vuetify-light::-webkit-scrollbar-thumb {
+  height: 30%;
+  background: $scrollbar-background-color;
+
+  border-radius: 10px;
+}
+
+.list-vuetify-light::-webkit-scrollbar-track {
+  background: $scrollbar-color;
+}
