[FEAT] 태그 하이라이트 효과 class 변경

--- a/src/css/pages/project.scss
+++ b/src/css/pages/project.scss
@@ -219,7 +219,7 @@
   overflow-y: scroll;
 }
 
-#editor-main-lines > span {
+.text-line {
   width: 100%;
   display: inline;
   word-wrap:break-word;
