태그 툴팁 구현 중간저장

--- a/src/css/pages/project.scss
+++ b/src/css/pages/project.scss
@@ -219,6 +219,11 @@
   overflow-y: scroll;
 }
 
+.tag-tooltip {
+  visibility: hidden;
+  position: fixed;
+}
+
 .text-line {
   width: 100%;
   display: inline;
