--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -7,6 +7,7 @@ html {
 
 body {
   height: 100%;
+  position: relative;
 }
 
 #app {
@@ -46,6 +47,7 @@ body {
 
 .list-vuetify-light::-webkit-scrollbar {
   width: 4px;
+  height: 4px;
 }
 
 .list-vuetify-light::-webkit-scrollbar-thumb {
@@ -57,4 +59,17 @@ body {
 
 .list-vuetify-light::-webkit-scrollbar-track {
   background: $scrollbar-color;
+}
+
+.tooltip {
+  position: absolute;
+  padding: 5px 10px;
+  border: 1px solid #b3c9ce;
+  border-radius: 4px;
+  text-align: center;
+  //font: italic 14px/1.3 sans-serif;
+  color: #333;
+  background: #ffffff;
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, .3);
+  z-index: 1000;
 }
