--- a/src/css/pages/project.scss
+++ b/src/css/pages/project.scss
@@ -225,18 +225,91 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  //padding: 10px;
   gap: 10px;
 
   width: 100%;
 
   flex: none;
   order: 0;
-  flex-grow: 0;
+  //flex-grow: 0;
 }
 
 #tags-group-add-btn {
   width: 100%;
+}
+
+#layout-project-tag-selection-area {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0;
+  gap: 10px;
+
+  width: 230px;
+
+  flex: none;
+  order: 1;
+  flex-grow: 1;
+}
+
+#tag-selection-top {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0;
+  gap: 10px;
+
+  width: 100%;
+
+  flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 0;
+}
+
+#tag-top-title {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 30px;
+
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+
+  width: calc(100% - 90px);
+  height: 30px;
+
+  color: $text-black;
+
+  flex: none;
+  order: 0;
+}
+
+#tag-top-add-btn {
+  flex: none;
+  order: 1;
+}
+
+#tag-chips {
+  width: 100%;
+  height: 500px;
+
+  flex: none;
+  flex-grow: 1;
+
+  box-sizing: border-box;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 10px;
+  gap: 10px;
+
+  border: 1px solid $main-color;
+  border-radius: 8px;
+
+  overflow-y: scroll;
 }
 
 .text-line {
