--- a/src/css/pages/project.scss
+++ b/src/css/pages/project.scss
@@ -303,13 +303,13 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 10px;
+  //padding: 10px;
   gap: 10px;
 
   border: 1px solid $main-color;
   border-radius: 8px;
 
-  overflow-y: scroll;
+  overflow-y: hidden;
 }
 
 .text-line {
