--- a/src/css/pages/project.scss
+++ b/src/css/pages/project.scss
@@ -343,3 +343,57 @@
 .highlight5 {
   background: #a47650;
 }
+
+#layout-project-model-area {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0;
+  gap: 10px;
+
+  width: 100%;
+
+  flex: none;
+  order: 2;
+  flex-grow: 0;
+}
+
+#model-top-title {
+  width: 100%;
+
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19px;
+
+  color: $text-black;
+
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+
+#model-learning-selection {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0;
+  gap: 10px;
+
+  width: 100%;
+
+  flex: none;
+  order: 2;
+  flex-grow: 0;
+}
+
+.learning-btn {
+  flex: none;
+  flex-grow: 1;
+}
+
+#annotation-btn {
+  width: 100%;
+  flex: none;
+  order: 3;
+}
