--- a/src/css/pages/project.scss
+++ b/src/css/pages/project.scss
@@ -105,7 +105,7 @@
   padding: 10px;
   gap: 20px;
 
-  width: calc(100% - 260px);
+  width: calc(100% - 290px);
   height: 100%;
 
   flex: none;
@@ -118,10 +118,10 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 10px;
-  gap: 20px;
+  padding: 10px 0 0 0;
+  gap: 10px;
 
-  width: 250px;
+  width: 280px;
   height: 100%;
 
   flex: none;
@@ -231,7 +231,7 @@
 
   flex: none;
   order: 0;
-  //flex-grow: 0;
+  flex-grow: 0;
 }
 
 #tags-group-add-btn {
@@ -245,7 +245,7 @@
   padding: 0;
   gap: 10px;
 
-  width: 230px;
+  width: 100%;
 
   flex: none;
   order: 1;
@@ -293,7 +293,7 @@
 
 #tag-chips {
   width: 100%;
-  height: 500px;
+  height: 300px;
 
   flex: none;
   flex-grow: 1;
@@ -396,4 +396,112 @@
   width: 100%;
   flex: none;
   order: 3;
+}
+
+.stepper-item {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0;
+  gap: 10px;
+
+  width: 100%;
+}
+
+.stepper-item-top {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0;
+  gap: 10px;
+
+  width: 100%;
+
+  flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 0;
+}
+
+.stepper-item-top-circle {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0 0 3px 0;
+  gap: 10px;
+
+  width: 24px;
+  height: 24px;
+
+  background: #5373C3;
+  border-radius: 12px;
+
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+
+.stepper-item-top-circle-num {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+
+  color: $text-white;
+
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+
+.stepper-item-top-circle-title {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+
+  color: $text-black;
+
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+}
+
+.stepper-item-content {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0 0 0 12px;
+  gap: 12px;
+
+  width: 100%;
+  min-height: 40px;
+
+  flex: none;
+  order: 1;
+  align-self: stretch;
+  flex-grow: 1;
+}
+
+.stepper-item-content-last {
+  min-height: 0 !important;
+}
+
+.stepper-item-content-area {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0;
+  gap: 20px;
+
+  width: calc(100% - 24px);
+
+  flex: none;
+  order: 1;
+  align-self: stretch;
+  flex-grow: 1;
+}
+
+.stepper-item-hide {
+  display: none;
 }
