--- a/src/css/pages/project.scss
+++ b/src/css/pages/project.scss
@@ -361,12 +361,12 @@
   flex-grow: 0;
 }
 
-#model-top-title {
+.model-summary {
   width: 100%;
 
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 19px;
 
   color: $text-black;
