--- a/src/css/pages/project.scss
+++ b/src/css/pages/project.scss
@@ -317,9 +317,17 @@
 
 .text-line {
   width: 100%;
+  display: block;
+  //word-wrap:break-word;
+  margin: 6px 0px 6px 0;
+  cursor: pointer;
+}
+
+.text-word {
+  width: 100%;
   display: inline;
   word-wrap:break-word;
-  margin: 6px 6px 6px 0;
+  margin-right: 6px;
   cursor: pointer;
 }
 
