--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -73,3 +73,12 @@ body {
   box-shadow: 3px 3px 3px rgba(0, 0, 0, .3);
   z-index: 1000;
 }
+
+.dragItem {
+  background: #b7b7b7;
+  padding: 5px 12px 5px 12px;
+  border-radius: 90px;
+  position:absolute;
+  left:-100%;
+  top: 0;
+}
