--- a/src/css/pages/project.scss
+++ b/src/css/pages/project.scss
@@ -22,7 +22,7 @@
   padding: 20px;
   gap: 10px;
 
-  min-width: 200px;
+  width: 200px;
   height: 100%;
 
   background: $main-color;
@@ -74,8 +74,24 @@
 #text-project-list-item {
   background: $main-color;
   color: $text-white;
-  //margin-left: -10px;
+
+  height: calc(100% - 33px);
   width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  //gap: 10px;
+  overflow-y: scroll;
+}
+
+.list-vuetify-item {
+  cursor: pointer;
+  padding: 5px 10px 5px 10px;
+  border-radius: 5px;
+}
+
+.list-vuetify-item:hover {
+  background: rgba(255, 255, 255, 0.25);
 }
 
 #text-project-create-btn {
