--- a/src/css/components/dialog.scss
+++ b/src/css/components/dialog.scss
@@ -133,3 +133,11 @@
   flex-grow: 0;
   padding: 0 20px 0 20px;
 }
+
+#dialog-progressbar {
+  width: 100%;
+  padding: 0 20px 20px 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
