--- a/src/css/pages/project.scss
+++ b/src/css/pages/project.scss
@@ -119,7 +119,7 @@
   flex-direction: column;
   align-items: flex-start;
   padding: 10px;
-  gap: 20px;
+  gap: 10px;
 
   width: calc(100% - 290px);
   height: 100%;
@@ -185,9 +185,10 @@
   flex-direction: column;
   align-items: flex-start;
   padding: 0;
+  margin: 10px 0 0 0;
 
   width: 100%;
-  height: calc(100% - 40px);
+  height: calc(100% - 40px - 60px);
 
   border: 1px solid #232323;
   border-radius: 8px;
@@ -198,6 +199,15 @@
   flex-grow: 1;
 
   overflow: hidden;
+}
+
+#layout-project-editor-pagination {
+  width: 100%;
+
+  flex: none;
+  order: 2;
+  align-self: stretch;
+  flex-grow: 1;
 }
 
 #layout-project-editor-main-title {
