--- a/src/css/pages/project.scss
+++ b/src/css/pages/project.scss
@@ -199,6 +199,7 @@
   flex-grow: 1;
 
   overflow: hidden;
+  position: relative;
 }
 
 #layout-project-editor-pagination {
@@ -223,6 +224,24 @@
   order: 0;
   align-self: stretch;
   flex-grow: 0;
+}
+
+#editor-main-data-search {
+  position: absolute;
+  right: 4px;
+  top: 39px;
+  width: 150px;
+  padding: 8px;
+
+  border-radius: 0 0 8px 8px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  background-color: white;
+
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+
+  z-index: 2;
 }
 
 #editor-main-title {
