--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -82,3 +82,92 @@ body {
   left:-100%;
   top: 0;
 }
+
+// custom select box
+
+.select-container {
+  position: relative;
+  width: 140px;
+  height: 30px;
+}
+
+.btn-select {
+  width: 100%;
+  padding: 8px 0px 8px 14px;
+  font-size: 12px;
+  line-height: 14px;
+  background-color: #fff;
+  color: white;
+
+  //border: 1px solid #C4C4C4;
+  box-sizing: border-box;
+  border-radius: 10px;
+  cursor: pointer;
+  text-align: left;
+  background: url("~@/assets/expand_more_white_18.svg") center right 5px no-repeat;
+
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.btn-select:hover,
+.btn-select:focus {
+  //border: 1px solid #9B51E0;
+  outline: 1px solid #ffffff;
+}
+
+.list-member {
+  display: none;
+  position: absolute;
+  width: 100%;
+  top: 35px;
+  left: 0;
+  border: 1px solid #C4C4C4;
+  box-sizing: border-box;
+  box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+
+  z-index: 35;
+  background-color: white;
+}
+
+.btn-select.on {
+  background: url("~@/assets/expand_less_white_18.svg") center right 5px no-repeat;
+}
+
+.btn-select.on+.list-member {
+  display: block;
+}
+
+.list-member {
+  padding-bottom: 2px;
+}
+
+.list-member li {
+  padding: 3px 8px;
+  box-sizing: border-box;
+  list-style: none;
+}
+
+.list-member li button {
+  width: 100%;
+  padding: 5px 10px;
+
+  font-size: 14px;
+
+  border: none;
+  background-color: #fff;
+  border-radius: 8px;
+  cursor: pointer;
+  text-align: left;
+
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.list-member li button:hover,
+.list-member li button:focus {
+  background-color: #F8E4FF;
+}
