[FEAT] 문자열 태그 영역 가져오기 api 구현 완료

--- a/src/css/pages/project.scss
+++ b/src/css/pages/project.scss
@@ -643,3 +643,14 @@
   padding: 0px 4px 4px 4px;
   color: $text-white;
 }
+
+#editor-words div {
+  position: relative;
+  display: block;
+}
+
+#editor-words div .text-line-selection {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
