--- a/src/css/pages/project.scss
+++ b/src/css/pages/project.scss
@@ -13,6 +13,8 @@
   order: 1;
   align-self: center;
   flex-grow: 0;
+
+  background-color: rgba(255, 255, 255, 0);
 }
 
 #layout-project-sidebar {
