--- a/src/css/pages/project.scss
+++ b/src/css/pages/project.scss
@@ -380,6 +380,18 @@
   margin: 6px 0px 6px 0;
 }
 
+.text-line-paragraph {
+  display: flex;
+  flex-direction: row;
+}
+
+.text-line-paragraph div {
+  height: 100%;
+  width: 30px;
+  margin-right: 5px;
+  padding-top: 3px;
+}
+
 .text-word {
   width: 100%;
   display: inline;
