[FEAT] 문단 태그 추가 중간저장

--- a/src/css/pages/project.scss
+++ b/src/css/pages/project.scss
@@ -707,3 +707,11 @@
 .table-result {
   width: 100%;
 }
+
+#area-set-paragraph {
+  width: 100%;
+  color: white;
+  font-size: 14px;
+  background: #232323;
+  padding: 5px;
+}
