[FEAT] 문단 태그 추가 중간저장

--- a/src/css/pages/project.scss
+++ b/src/css/pages/project.scss
@@ -714,4 +714,11 @@
   font-size: 14px;
   background: #232323;
   padding: 5px;
+
+  display: flex;
+}
+
+#area-set-paragraph div {
+  padding-top: 3px;
+  width: 100%;
 }
