[FEAT] 태그 그룹 변경시 기존 편집 기록 남도록 구현

--- a/src/css/pages/project.scss
+++ b/src/css/pages/project.scss
@@ -386,11 +386,16 @@
   flex-direction: row;
 }
 
-.text-line-paragraph div {
+.text-line-paragraph-line-num {
   height: 100%;
   width: 30px;
   margin-right: 5px;
   padding-top: 3px;
+}
+
+.paragraph-highlight {
+  overflow-wrap: break-word;
+  width: calc(100% - 30px);
 }
 
 .text-word {
