[FEAT] 대시보드 각 데이터 타입마다 태그 정보 가져오도록 변경

--- a/src/css/pages/dashboard.scss
+++ b/src/css/pages/dashboard.scss
@@ -207,3 +207,18 @@
   //width: 50vw;
  width: 300px;
 }
+
+#layout-dashboard-history::-webkit-scrollbar {
+  width: 0;
+}
+
+#layout-dashboard-history::-webkit-scrollbar-thumb {
+  height: 30%;
+  background: $scrollbar-background-color;
+
+  border-radius: 10px;
+}
+
+#layout-dashboard-history::-webkit-scrollbar-track {
+  background: $scrollbar-color;
+}
